Alignment of login page fixed

--- a/Lab Task 3/login.css
+++ b/Lab Task 3/login.css
@@ -15,6 +15,9 @@ body {
   width: 320px;
   text-align: left;
 }
+.form-container h2{
+  text-align: center;
+}
 
 label {
   display: block;
